# mcp-ran-poc

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  apply-ns.yaml  cgucrd.yaml  demo.md  deployment.yaml  kustomization.yaml  main.py  pyproject.toml  server.py  upgrade.yaml
.claude/: settings.local.json
clients/: run_all.sh  run_backend.sh  run_frontend.sh
clients/adk-agents/: __init__.py  agent.py  root_agent.py
clients/backend/: main.py
clients/frontend/: app.py
servers/: ocloud-pg.py  talm.py
